--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -15,6 +15,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
+          # Use the GH_TOKEN for authentication
           token: ${{ secrets.GH_TOKEN }}
 
       - name: Set up Python
