--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,7 +21,7 @@ nav:
   - Installation: installation.md
   - Usage: usage.md
   - API Reference: api.md
-  #- Contributing: contributing.md
+  - Contributing: contributing.md
 
 markdown_extensions:
   - pymdownx.highlight
